@@ -159,7 +159,7 @@ include(dirname(__FILE__).'/top.php');
 			</div>
 		</div>
 	</fieldset>
-	<?php eval($plxAdmin->plxPlugins->callHook('AdminSettingsAdvanced')) ?>
+	<?php eval($plxAdmin->plxPlugins->callHook('AdminSettingsAdvanced')) # Hook Plugins ?>
 </form>
 
 <?php
