@@ -29,7 +29,7 @@ if(isset($_GET["del"]) AND $_GET["del"]=="install") {
 	<script src="<?php echo PLX_CORE ?>lib/visual.js?ver=<?php echo PLX_VERSION ?>"></script>
 	<script src="<?php echo PLX_CORE ?>lib/mediasManager.js?ver=<?php echo PLX_VERSION ?>"></script>
 	<script defer src="<?php echo PLX_CORE ?>lib/multifiles.js?ver=<?php echo PLX_VERSION ?>"></script>
-	<?php eval($plxAdmin->plxPlugins->callHook('AdminTopEndHead')) ?>
+	<?php eval($plxAdmin->plxPlugins->callHook('AdminTopEndHead')) # Hook Plugins ?>
 </head>
 
 <body id="<?php echo basename($_SERVER['SCRIPT_NAME'], ".php") ?>">
@@ -145,4 +145,4 @@ if(isset($_GET["del"]) AND $_GET["del"]=="install") {
 		plxMsg::Display();
 		?>
 
-		<?php eval($plxAdmin->plxPlugins->callHook('AdminTopBottom')) ?>
+		<?php eval($plxAdmin->plxPlugins->callHook('AdminTopBottom')) # Hook Plugins ?>
