@@ -76,7 +76,7 @@ include(dirname(__FILE__).'/top.php');
 			</div>
 		</div>
 	</fieldset>
-	<?php eval($plxAdmin->plxPlugins->callHook('AdminUser')) ?>
+	<?php eval($plxAdmin->plxPlugins->callHook('AdminUser')) # Hook Plugins ?>
 
 </form>
 
