@@ -44,7 +44,7 @@ $plxMotor->demarrage();
 # Creation de l'objet d'affichage
 $plxShow = plxShow::getInstance();
 
-eval($plxMotor->plxPlugins->callHook('IndexBegin'));
+eval($plxMotor->plxPlugins->callHook('IndexBegin')); # Hook Plugins
 
 # On démarre la bufferisation
 ob_start();
@@ -69,10 +69,10 @@ $output = ob_get_clean();
 
 # Hooks spécifiques au thème
 ob_start();
-eval($plxMotor->plxPlugins->callHook('ThemeEndHead'));
+eval($plxMotor->plxPlugins->callHook('ThemeEndHead')); # Hook Plugins
 $output = str_replace('</head>', ob_get_clean().'</head>', $output);
 ob_start();
-eval($plxMotor->plxPlugins->callHook('ThemeEndBody'));
+eval($plxMotor->plxPlugins->callHook('ThemeEndBody')); # Hook Plugins
 $output = str_replace('</body>', ob_get_clean().'</body>', $output);
 
 # Hook Plugins
