@@ -1,5 +1,6 @@
 ## PLUXML x.x (sortie : xx/xx/xxxx) ##
 
+[+] CodesBook : Les "Hook Plugins" en commentaire complétés
 [+] [admin menu] Les id de liste pour chaque menu sont fixes : url basename (style compatible multilingue) : class.plx.utils.php : formatMenu() : portée css id admin/top.php : li#mnu_nomPageAdminSansPointPhp ou li#mnu_LeNomDuPlugin (@sudwebdesign #0f2d0cc)
 [+] [admin sessions] Change le profil de la session utilisateur sans qu'il est a se reconnecter s'il est re-profilé ou le déconnecte s'il est désactivé ou supprimé. Ceci dès sa prochaine action après le réglage d'un admin. (@sudwebdesign #6b40497)
 [+] [admin css] thème default : Élargir les bords entre 64 & 128rem + règles css print (1024 & 2048px). (@sudwebdesign #d0b06f6)
